@@ -15,7 +15,6 @@
   --enable-1g-pages \
   --enable-ignore-bad-msr \
   --enable-configurable-msrs \
-  --enable-port-e9-hack \
   --enable-debugger \
   --enable-disasm \
   --enable-debugger-gui \
